--- a/Autobus/Resources/Resource.xaml
+++ b/Autobus/Resources/Resource.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:collections="clr-namespace:System.Collections;assembly=mscorlib"
-    xmlns:ice="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options">
+    xmlns:ice="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib">
     <DrawingBrush x:Key="Koltuk" Stretch="Uniform">
         <DrawingBrush.Drawing>
             <DrawingGroup>
@@ -181,4 +182,85 @@
         <collections:DictionaryEntry Key="80" Value="OSMANİYE" />
         <collections:DictionaryEntry Key="81" Value="DÜZCE" />
     </collections:ArrayList>
+    <x:Array x:Key="Arabalar" Type="{x:Type sys:String}">
+        <sys:String>Chrysler</sys:String>
+        <sys:String>Citroën</sys:String>
+        <sys:String>Hillman</sys:String>
+        <sys:String>Chevrolet</sys:String>
+        <sys:String>Cadillac</sys:String>
+        <sys:String>Ford</sys:String>
+        <sys:String>BMW</sys:String>
+        <sys:String>Austin</sys:String>
+        <sys:String>Fillmore</sys:String>
+        <sys:String>Fairthorpe</sys:String>
+        <sys:String>Studebaker</sys:String>
+        <sys:String>Pontiac</sys:String>
+        <sys:String>Buick</sys:String>
+        <sys:String>Rambler</sys:String>
+        <sys:String>Plymouth</sys:String>
+        <sys:String>Volkswagen</sys:String>
+        <sys:String>Jensen</sys:String>
+        <sys:String>Oldsmobile</sys:String>
+        <sys:String>Mercury</sys:String>
+        <sys:String>Shelby</sys:String>
+        <sys:String>Dodge</sys:String>
+        <sys:String>Porsche</sys:String>
+        <sys:String>Toyota</sys:String>
+        <sys:String>Mercedes-Benz</sys:String>
+        <sys:String>MG</sys:String>
+        <sys:String>Nissan</sys:String>
+        <sys:String>Honda</sys:String>
+        <sys:String>Renault</sys:String>
+        <sys:String>Mazda</sys:String>
+        <sys:String>Mitsubishi</sys:String>
+        <sys:String>Subaru</sys:String>
+        <sys:String>Lotus</sys:String>
+        <sys:String>Lincoln</sys:String>
+        <sys:String>Maserati</sys:String>
+        <sys:String>Saab</sys:String>
+        <sys:String>Audi</sys:String>
+        <sys:String>Suzuki</sys:String>
+        <sys:String>Lamborghini</sys:String>
+        <sys:String>Merkur</sys:String>
+        <sys:String>Land Rover</sys:String>
+        <sys:String>Acura</sys:String>
+        <sys:String>Lexus</sys:String>
+        <sys:String>Eagle</sys:String>
+        <sys:String>Alfa Romeo</sys:String>
+        <sys:String>Daihatsu</sys:String>
+        <sys:String>Geo</sys:String>
+        <sys:String>GMC</sys:String>
+        <sys:String>Hyundai</sys:String>
+        <sys:String>Infiniti</sys:String>
+        <sys:String>Isuzu</sys:String>
+        <sys:String>Jaguar</sys:String>
+        <sys:String>Jeep</sys:String>
+        <sys:String>Saturn</sys:String>
+        <sys:String>Volvo</sys:String>
+        <sys:String>HUMMER</sys:String>
+        <sys:String>Kia</sys:String>
+        <sys:String>Holden</sys:String>
+        <sys:String>Corbin</sys:String>
+        <sys:String>Daewoo</sys:String>
+        <sys:String>MINI</sys:String>
+        <sys:String>Maybach</sys:String>
+        <sys:String>Spyker</sys:String>
+        <sys:String>Scion</sys:String>
+        <sys:String>Spyker Cars</sys:String>
+        <sys:String>Aston Martin</sys:String>
+        <sys:String>Bentley</sys:String>
+        <sys:String>Panoz</sys:String>
+        <sys:String>Rolls-Royce</sys:String>
+        <sys:String>Ferrari</sys:String>
+        <sys:String>Morgan</sys:String>
+        <sys:String>Peugeot</sys:String>
+        <sys:String>Foose</sys:String>
+        <sys:String>Aptera</sys:String>
+        <sys:String>Smart</sys:String>
+        <sys:String>Bugatti</sys:String>
+        <sys:String>Tesla</sys:String>
+        <sys:String>Ram</sys:String>
+        <sys:String>Fiat</sys:String>
+        <sys:String>McLaren</sys:String>
+    </x:Array>
 </ResourceDictionary>
