--- a/Autobus/Resources/Resource.xaml
+++ b/Autobus/Resources/Resource.xaml
@@ -52,11 +52,11 @@
                             <Pen Brush="#FF000000" LineJoin="Round" Thickness="2" />
                         </GeometryDrawing.Pen>
                     </GeometryDrawing>
-                    <GeometryDrawing ice:Freeze="True" Brush="#FF0000FF"
+                    <GeometryDrawing ice:Freeze="True" Brush="Blue"
                         Geometry="F1 M 0.999997,2.01915L 29.1956,2.01915L 29.1956,57.7309L 0.999997,57.7309L 0.999997,2.01915 Z " />
-                    <GeometryDrawing ice:Freeze="True" Brush="#FFFFFFFF"
+                    <GeometryDrawing ice:Freeze="True" Brush="White"
                         Geometry="F1 M 13.6,43.6324L 9.6,43.6324L 9.6,55.0324L 6.4,55.0324L 6.4,43.6324L 2.4,43.6324L 2.4,41.0324L 13.6,41.0324L 13.6,43.6324 Z " />
-                    <GeometryDrawing ice:Freeze="True" Brush="#FFFFFFFF"
+                    <GeometryDrawing ice:Freeze="True" Brush="White"
                         Geometry="F1 M 27.0219,55.0324L 23.4,55.0324L 21.2969,51.4042C 21.1406,51.1272 20.9901,50.8808 20.8453,50.6652C 20.7005,50.4495 20.5542,50.2647 20.4063,50.1105C 20.2583,49.9563 20.1042,49.8381 19.9438,49.7558C 19.7833,49.6735 19.6094,49.6324 19.4219,49.6324L 18.6,49.6324L 18.6,55.0324L 15.4,55.0324L 15.4,41.0324L 20.3531,41.0324C 23.7177,41.0324 25.4,42.2959 25.4,44.823C 25.4,45.3084 25.3266,45.7568 25.1797,46.1683C 25.0328,46.5798 24.8255,46.9506 24.5578,47.2808C 24.2901,47.611 23.9667,47.8959 23.5875,48.1355C 23.2083,48.3751 22.7865,48.5626 22.3219,48.698L 22.3219,48.7386C 22.526,48.8032 22.724,48.9089 22.9156,49.0558C 23.1073,49.2027 23.2922,49.3745 23.4703,49.5714C 23.6484,49.7683 23.8193,49.9798 23.9828,50.2058C 24.1464,50.4318 24.2948,50.6532 24.4281,50.8699L 27.0219,55.0324 Z M 18.6,43.4324L 18.6,47.2324L 19.8844,47.2324C 20.5198,47.2324 21.0292,47.0417 21.4125,46.6605C 21.8042,46.273 22,45.7938 22,45.223C 22,44.0292 21.3125,43.4324 19.9375,43.4324L 18.6,43.4324 Z " />
                 </DrawingGroup.Children>
             </DrawingGroup>
